// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ancillaries page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
  },
}
`;

exports[`Ancillaries page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
  },
}
`;

exports[`Ancillaries page should match the snapshot 1`] = `
<div>
  <div
    data-testid="GuestDetailsLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="MockPage"
      />
    </div>
  </div>
</div>
`;
